# reverse-proxy

./: .gitignore  README.md  default.conf  docker-compose.yml  main.py  pyproject.toml
blog/: index.html
conf/nginx/: nginx.conf
conf/nginx/conf.d/: default.conf
nginx-sites-enabled/: .lb.swp  lb  mygoogle  mynaver
note/: docker_stats.csv  docker_stats.ipynb  nginx_status.csv  nginx_status_TODO.ipynb  numpy-basic.ipynb  numpy_1000_1mil_output.csv  numpy_1000_nocache_output.csv  numpy_1200_40M_output.csv  numpy_1300_output.csv  numpy_700_1mil_output.csv  numpy_output.csv  python_1000_1mil_output.csv  python_1000_nocache_output.csv  python_1200_40M_output.csv  python_1300_output.csv  python_700_1mil_output.csv  python_output.csv  python_vs_numpy.ipynb  python_vs_numpy_cache-Copy1.ipynb
note/stats/: numpy_1000_1mil_docker_stats.csv  numpy_1000_nocache_docker_stats.csv  numpy_1200error_docker_stats.csv  numpy_500_nocache_docker_stats.csv  numpy_700_1mil_docker_stats.csv  numpy_docker_stats.csv  python_1000_1mil_docker_stats.csv  python_1000_nocache_docker_stats.csv  python_1300_docker_stats.csv  python_1300error_docker_stats.csv  python_500_nocache_docker_stats.csv  python_700_1mil_docker_stats.csv  python_docker_stats.csv
pyweb1/: index.html
pyweb2/: index.html
pyweb3/: index.html
pyweb4/: index.html
src/reverse_proxy/: higher_ordder_fun.py
